--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "author": "Leon Garibello",
   "license": "MIT",
   "scripts": {
-    "build": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch",
+    "build": "webpack --watch",
+    "build-babel": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch",
     "start": "live-server public/"
   },
   "dependencies": {
     "babel-cli": "6.24.1",
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
-    "live-server": "^1.2.0"
+    "live-server": "^1.2.0",
+    "webpack": "3.1.0"
   }
 }
