--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "webpack --watch",
     "build-babel": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch",
-    "start": "live-server public/"
+    "live-server": "live-server public/",
+    "start" : "webpack-dev-server"
   },
   "dependencies": {
     "babel-cli": "6.24.1",
@@ -19,6 +20,7 @@
     "react": "16.0.0",
     "react-dom": "16.0.0",
     "validator": "8.0.0",
-    "webpack": "3.1.0"
+    "webpack": "3.1.0",
+    "webpack-dev-server": "2.5.1"
   }
 }
