--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "build": "webpack --watch",
     "build-babel": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch",
     "live-server": "live-server public/",
-    "start" : "webpack-dev-server"
+    "start": "webpack-dev-server"
   },
   "dependencies": {
     "babel-cli": "6.24.1",
     "babel-core": "6.25.0",
     "babel-loader": "7.1.1",
+    "babel-plugin-transform-class-properties": "6.24.1",
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "live-server": "^1.2.0",
