--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "css-loader": "0.28.4",
     "live-server": "^1.2.0",
     "node-sass": "4.5.3",
+    "normalize.css": "7.0.0",
     "react": "16.0.0",
     "react-dom": "16.0.0",
-    "react-modal": "2.2.2",
+    "react-modal": "3.6.1",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
     "validator": "8.0.0",
